fixed some background img layout problems

--- a/app/styles/desktop/index.css
+++ b/app/styles/desktop/index.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -20,8 +21,9 @@ body {
   width: calc(1366rem / 16);
   min-height: calc(6587rem / 16);
   /* position: relative; */
-  /* overflow: hidden; */
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
